# VoxelCraft-Rust

./: Cargo.toml  README.md  REBUILD.md  SUMMARY.md  VoxelCraft-Rust-DEEP-BUG-AUDIT.md
.github/workflows/: ci.yml
examples/: render_png.rs
src/: blocks.rs  lib.rs  logger.rs  main.rs  main.rs.bak  player.rs
src/renderer/: mod.rs  pipeline.rs  texture.rs  world.wgsl
src/ui/: mod.rs
src/world/: chunk.rs  mesher.rs  mod.rs  noise.rs  world.rs
tests/: engine_tests.rs
