[package]
name = "voxelcraft"
version = "0.1.0"
edition = "2021"
authors = ["VoxelCraft"]
description = "A Minecraft-style voxel sandbox built with Rust + wgpu + egui"

[lib]
name = "voxelcraft"
path = "src/lib.rs"

[[bin]]
name = "voxelcraft"
path = "src/main.rs"

[dependencies]
# Graphics & window (binary only, but listed here for simplicity)
wgpu = "0.20"
winit = { version = "0.29", features = ["rwh_05"] }
egui = "0.28"
egui-wgpu = "0.28"
egui-winit = "0.28"

# Math
glam = { version = "0.29", features = ["bytemuck"] }
bytemuck = { version = "1.16", features = ["derive"] }

# Terrain
noise = "0.9"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async
pollster = "0.3"

# Utilities
ahash = "0.8"
parking_lot = "0.12"
once_cell = "1.20"
rayon = "1.10"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1

[dev-dependencies]
image = "0.25"
glam = { version = "0.29", features = ["bytemuck"] }
